--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
 
+  # Location & Permissions
+  geolocator: ^13.0.2
+  permission_handler: ^11.3.1
+  flutter_foreground_task: ^8.15.0
+  connectivity_plus: ^6.1.2
+  shared_preferences: ^2.3.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
