Complete Phase 5: App icon, release build, and pre-launch checklist
- Add custom app icon with orange adaptive background (#FF9800)
- Configure release signing with keystore and ProGuard rules
- Build release APK (54.8 MB) with code minification
- Wrap all debugPrint statements in kDebugMode for release
- Update README.md with complete setup and documentation
- Add customer screens (vendor detail, list, menu views)
- Add vendor screens (cuisine selection, menu management)
- Add utility services (storage, customer location, distance formatter)

Phase 5 is now complete with all 7 tasks finished.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ app.*.map.json
 # CRITICAL: Never commit credentials or API keys
 *.jks
 *.keystore
+android/key.properties
 google-services.json
 **/secrets/
 .env
