feat: Complete Sprint 4 with Riverpod, favorites, offline sync, and bug fixes
Sprint 4 Implementation:
- Migrate state management to Riverpod with centralized providers
- Add customer favorites feature with Firestore persistence
- Enable Firestore offline persistence with unlimited cache
- Add favorites tab to customer home navigation

Bug Fixes:
- Fix vendor list Something went wrong error (missing Firestore index)
- Improve login error messages for better UX
- Configure and regenerate app launcher icons

Documentation:
- Reorganize docs: merge Phases-Completion into unified docs/ structure
- Add phase documentation under docs/phases/
- Add sprint documentation under docs/sprints/
- Update bugs.md, README.md with Firestore indexes info

New Files:
- lib/providers/providers.dart - Centralized Riverpod providers
- lib/models/favorite.dart - Favorite data model
- lib/screens/customer/favorites_screen.dart - Favorites UI
- lib/services/analytics_service.dart - Firebase Analytics
- lib/services/notification_service.dart - FCM notifications
- lib/services/theme_service.dart - Theme management

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
     <!-- Network state for offline detection -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- Receive boot to restart service after reboot (optional but recommended) -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <!-- Boot permission removed - BootReceiver causes issues on Android 16 -->
 
     <!-- Camera and Gallery for image picker -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -57,14 +56,8 @@
             android:foregroundServiceType="location"
             android:exported="false" />
 
-        <!-- Boot receiver to restart service -->
-        <receiver
-            android:name="com.pravera.flutter_foreground_task.receiver.BootReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
+        <!-- Boot receiver removed - causes ClassNotFoundException on Android 16 -->
+        <!-- Vendor must manually reopen app after device restart -->
 
         <!-- Required for image_picker on Android -->
         <provider
