--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,13 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   firebase_storage: ^12.3.7
+  firebase_analytics: ^11.0.0
+  firebase_crashlytics: ^4.0.0
+  firebase_messaging: ^15.0.0
 
-  # Image Picker
+  # Image Picker & Caching
   image_picker: ^1.1.2
+  cached_network_image: ^3.3.0
 
   # Location & Permissions
   geolocator: ^13.0.2
@@ -53,6 +57,10 @@ dependencies:
   shared_preferences: ^2.3.4
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+
+  # State Management
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +73,23 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
+
+  # Testing
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  fake_cloud_firestore: ^3.1.0
+
+  # Riverpod codegen
+  riverpod_generator: ^2.4.0
+
+# Launcher icons configuration
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#FF6B35"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
