feat: Add profile menu, fix favorites, splash icon, and create app-builds folder
- Add profile popup menu with email and role badge in customer/vendor home
- Fix favorites tab error by adding Firestore security rules
- Fix splash screen icon zoom with Transform.scale(1.25)
- Remove 16% inset from adaptive icon for proper sizing
- Create app-builds folder with v1.0.0 release APK
- Update documentation with all bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,8 @@ lib/firebase_options.dart
 *.apk
 *.aab
 
+# Exception: Allow release builds in app-builds folder
+!app-builds/*.apk
+
 # Android gradle
 android/.gradle/
