refactor: Organize app-builds with version folders and release notes
- Restructured app-builds to use version-specific folders (v1.0.0/)
- Each version folder contains APK and README with release notes
- README includes new features, bug fixes, and technical details
- Updated .gitignore for nested folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ lib/firebase_options.dart
 *.aab
 
 # Exception: Allow release builds in app-builds folder
-!app-builds/*.apk
+!app-builds/**/*.apk
 
 # Android gradle
 android/.gradle/
